--- a/style.scss
+++ b/style.scss
@@ -30,10 +30,6 @@ body {
   width: 100%;
 }
 
-p {
-  text-align: justify
-}
-
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
@@ -70,6 +66,7 @@ h4 {
 
 p {
   margin: 15px 0;
+  text-align: justify;
 }
 
 a {
