Header and style updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,36 +18,32 @@
   </head>
 
   <body>
+    <!--Header-->
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
-
-          <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
-          </div>
 
           <nav>
+            <a href="{{ site.baseurl }}"><b>Iaroslav Shcherbatyi</b></a>
+            <a href="https://scholar.google.de/citations?user=tQXS7LIAAAAJ&hl=en">Publications</a>
+            <a href="{{ site.baseurl }}">Projects</a>
+            <a href="{{ site.baseurl }}">Demos</a>
+            <a href="https://docs.google.com/document/d/1lyqMQ7tKS7N1o7xGfTWXQ-wd2rHkBK3piQs0MOzrxyY/edit?usp=sharing">CV</a>
             <a href="{{ site.baseurl }}/blog">Blog</a>
-            <a href="{{ site.baseurl }}/">About</a>
+            <a href="https://github.com/iaroslav-ai">Code</a>
+            <a href="{{ site.baseurl }}">Contact</a>
+            <a href="{{ site.baseurl }}">Jobs</a>
           </nav>
+
         </header>
       </div>
     </div>
 
+    <!--Main content-->
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
 
-    <div class="wrapper-footer">
-      <div class="container">
-        <footer class="footer">
-          {% include svg-icons.html %}
-        </footer>
-      </div>
-    </div>
 
-    {% include analytics.html %}
   </body>
 </html>
