Style updates and construction zone img

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,15 +24,15 @@
         <header class="masthead clearfix">
 
           <nav>
-            <a href="{{ site.baseurl }}"><b>Iaroslav Shcherbatyi</b></a>
+            <a href="{{ site.baseurl }}/"><b>Iaroslav Shcherbatyi</b></a>
             <a href="https://scholar.google.de/citations?user=tQXS7LIAAAAJ&hl=en">Publications</a>
-            <a href="{{ site.baseurl }}">Projects</a>
-            <a href="{{ site.baseurl }}">Demos</a>
+            <a href="{{ site.baseurl }}/under_construction">Projects</a>
+            <a href="{{ site.baseurl }}/under_construction">Demos</a>
             <a href="https://docs.google.com/document/d/1lyqMQ7tKS7N1o7xGfTWXQ-wd2rHkBK3piQs0MOzrxyY/edit?usp=sharing">CV</a>
             <a href="{{ site.baseurl }}/blog">Blog</a>
             <a href="https://github.com/iaroslav-ai">Code</a>
-            <a href="{{ site.baseurl }}">Contact</a>
-            <a href="{{ site.baseurl }}">Jobs</a>
+            <a href="{{ site.baseurl }}/under_construction">Contact</a>
+            <a href="{{ site.baseurl }}/under_construction">Jobs</a>
           </nav>
 
         </header>
