Add contact and job offers pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
             <a href="https://docs.google.com/document/d/1lyqMQ7tKS7N1o7xGfTWXQ-wd2rHkBK3piQs0MOzrxyY/edit?usp=sharing">CV</a>
             <a href="{{ site.baseurl }}/blog">Blog</a>
             <a href="https://github.com/iaroslav-ai">Code</a>
-            <a href="{{ site.baseurl }}/under_construction">Contact</a>
-            <a href="{{ site.baseurl }}/under_construction">Jobs</a>
+            <a href="{{ site.baseurl }}/contact">Contact</a>
+            <a href="{{ site.baseurl }}/job_offers">Job Offers</a>
           </nav>
 
         </header>
@@ -43,7 +43,7 @@
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
-
+    <br> <!--White space at the end of a page (PEP8 influence I guess :D )-->
 
   </body>
 </html>
