Add scikit-optimize as a project

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
           <nav>
             <a href="{{ site.baseurl }}/"><b>Iaroslav Shcherbatyi</b></a>
             <a href="https://scholar.google.de/citations?user=tQXS7LIAAAAJ&hl=en">Publications</a>
-            <a href="{{ site.baseurl }}/under_construction">Projects</a>
+            <a href="{{ site.baseurl }}/projects">Projects</a>
             <a href="{{ site.baseurl }}/under_construction">Demos</a>
             <a href="https://docs.google.com/document/d/1lyqMQ7tKS7N1o7xGfTWXQ-wd2rHkBK3piQs0MOzrxyY/edit?usp=sharing">CV</a>
             <a href="{{ site.baseurl }}/blog">Blog</a>
