--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
             <a href="{{ site.baseurl }}/blog">Blog</a>
             <a href="https://github.com/iaroslav-ai">Code</a>
             <a href="{{ site.baseurl }}/contact">Contact</a>
-            <a href="{{ site.baseurl }}/job_offers">Job Offers</a>
+            <a href="{{ site.baseurl }}/jobs">Jobs</a>
           </nav>
 
         </header>
